--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,21 @@
 }
 
 @layer base {
+  html {
+    height: 100%;
+    scroll-behavior: smooth;
+  }
+
+  body {
+    height: 100%;
+    @apply box-border bg-background text-black;
+  }
+
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 
 @layer components {
